2000-04-19  Pablo Saratxaga <pablo@mandrakesoft.com>

	* configure.in (ALL_LINGUAS): added Catalan

2000-04-18  Pavel Cisler  <pavel@eazel.com>

	Fixed two bugs Darin ran into.

	* libgnomevfs/gnome-vfs-xfer.c:
	(call_progress_with_current_names), (handle_error),
	(handle_overwrite):
	Made error/overwrite dialogs properly show the file that was being copied
	while an error ocurred.

	* libgnomevfs/gnome-vfs-xfer.c:
	(handle_name_conflicts):
	Add a way for the progress callback to find out if a single or multiple
	items ended up conflicting. That way the progress callback can determine
	if to add a Replace All option or not.

	* libgnomevfs/gnome-vfs-xfer.c:
	(gnome_vfs_xfer_private):
	Added a workaround for a bug that happens when the caller of the
	routine tries to handle a returned error by calling the progress 
	callback -- the problem is that that at that point the progress
	could have already cleaned up after itself knwong that the copy
	operation is over and could have deleted it's user data.
	
	* libgnomevfs/gnome-vfs-xfer.c:
	* test/test-xfer.c:
	Fixed warnings.

2000-04-18  Pavel Cisler  <pavel@eazel.com>

	* libgnomevfs/gnome-vfs-xfer.c:
	(handle_error):
	Made the error return value get set to GNOME_VFS_OK after
	Skip is selected -- This caused gnome_vfs_xfer_private to
	return an unexpected error that execute_xfer didn't know how
	to deal with.

	* libgnomevfs-pthread/gnome-vfs-job.c:
	(execute_xfer):
	Properly set up the dummy progress_info and progress_state
	structs used for reporting unexpexted error results returned
	by gnome_vfs_xfer_private.
	
2000-04-18  Pavel Cisler  <pavel@eazel.com>

	Fixed a bug in error reporting that I introduced in my
	previous checkin.

	* libgnomevfs/gnome-vfs-xfer.c:
	(handle_error):
	Set the progress_info->status value to the correct error value.
	(move_items):
	Fix a bug in a retry case - the result value needs to get reset to
	GNOME_VFS_OK after Retry is selected.
	
2000-04-17  Maciej Stachowiak  <mjs@eazel.com>
