@@ -90,6 +90,9 @@ const gchar	*gnome_vfs_file_info_get_mime_type
 void		 gnome_vfs_file_info_copy 	(GnomeVFSFileInfo *dest,
 						 const GnomeVFSFileInfo *src);
 
+gboolean	 gnome_vfs_file_info_matches	(const GnomeVFSFileInfo *a,
+						 const GnomeVFSFileInfo *b);
+
 gint		 gnome_vfs_file_info_compare_for_sort
 						(const GnomeVFSFileInfo *a,
 						 const GnomeVFSFileInfo *b,
