@@ -1,3 +1,14 @@
+2000-04-19  Pavel Cisler  <pavel@eazel.com>
+
+	* gnome-vfs-file-info.c:
+	* libgnomevfs/gnome-vfs-file-info.h:
+	(gnome_vfs_file_info_matches):
+	Added a new call.
+
+	* libgnomevfs/gnome-vfs-xfer.c:
+	Added a bunch of call_progress calls to ensure we can follow all 
+	the file system changes during a copy.
+
 2000-04-19  Pablo Saratxaga <pablo@mandrakesoft.com>
 
 	* configure.in (ALL_LINGUAS): added Catalan
